# pyproject-cookiecutter-example

./: .bumpversion.cfg  .clang-format  .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  publish.yml
binder/: requirements.txt
cpp/cmake/modules/: FindInstallDependency.cmake
cpp/include/pyproject-cookiecutter-example/: exports.hpp  extension.hpp  standalone.hpp
cpp/src/: executable.cpp  extension.cpp  standalone.cpp
docs/: Makefile  api.md  conf.py  make.bat
example-python/: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
example-python/cpp/include/example-python/: extension.hpp  standalone.hpp
example-python/cpp/src/: executable.cpp  extension.cpp  standalone.cpp
example-python/docs/: api.md  conf.py
example-python/example_python/: __init__.py
example-python/example_python/server/: __main__.py  server.py  tables.py
example-python/example_python/tests/: test_all.py
example-python/rust/: pyproject.toml
example-python/rust/src/: lib.rs
js/: jest.config.js  package-lock.json  package.json  webpack.config.js
js/src/: extension.js  model.js  plugin.js
pyproject_cookiecutter_example/: CMakeLists.txt  __init__.py  _cyextension.pyx
pyproject_cookiecutter_example/tests/: test_all.py
