[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:example_python/_version.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"


[bumpversion:file:pyproject.toml]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:js/package.json]
search = "version": "{current_version}"
replace = "version": "{new_version}"

[bdist_wheel]
universal=1

[metadata]
description_file=README.md
long_description_content_type=text/markdown

[flake8]
ignore=E203, W503
max-line-length=200
exclude=example_python/tests
per-file-ignores=
    example_python/__init__.py:F401, F403

[check-manifest]
ignore =
	example_python/labextension/**
	example_python/nbextension/**
	js/**
